--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mitulgolakiya/laravel-api-generator",
+    "name": "aziz/laravel5-api-generator",
     "description": "Laravel API/Scaffold/CRUD Generator from just one command with including Controller, Repository, Model, Migrations, routes.php update.",
     "keywords": ["laravel", "api", "model", "migration","scaffold", "CRUD",  "generator"],
     "license": "MIT",
@@ -11,8 +11,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/html": "~5.0",
-        "laracasts/flash": "~1.3"
+        "illuminate/html": "~5.0"
     },
     "autoload": {
         "files":[
