--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/html": "~5.0"
+        "illuminate/html": "~5.0",
+        "aziz/smartmodel": "2.5.*",
     },
     "autoload": {
         "files":[
