--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/html": "~5.0",
-        "aziz/smartmodel": "2.5.*",
+        "aziz/smartmodel": "2.5.*"
     },
     "autoload": {
         "files":[
